Fix(Picker): add translateZ on wrap and mask (#2653)
* Fix(Picker): add translateZ on wrap and mask

* Fix(Toast): add translateZ on mask

--- a/components/toast/style/index.less
+++ b/components/toast/style/index.less
@@ -21,6 +21,7 @@
     align-items: center;
     left: 0;
     top: 0;
+    transform: translateZ(1px);
   }
 
   &&-nomask {
@@ -29,7 +30,7 @@
     width: auto;
     left: 50%;
     top: 50%;
-
+    transform: translateZ(1px);
     .@{toastPrefixCls}-notice {
       transform: translateX(-50%) translateY(-50%);
     }
